<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@color/colorBlack">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack">

        <EditText
            android:id="@+id/enter_pass"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/warning"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="77dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="77dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            android:cursorVisible="true"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth"
            app:layout_constraintVertical_bias="0.204" />

        <TextView
            android:id="@+id/auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lock_status"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="136dp"
            android:text="@string/auth"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.028" />

        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="100dp"
            android:textAlignment="center"
            android:textColor="@color/colorRed"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth"
            app:layout_constraintVertical_bias="0.086" />

        <ImageView
            android:id="@+id/lock_status"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="180dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="180dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.058"
            app:srcCompat="@drawable/ic_action_lockscreenicon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="100dp"
            android:text="@string/confirm"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lock_status"
            app:layout_constraintVertical_bias="0.069" />

        <Button
            android:id="@+id/recover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_pass"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="128dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="128dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="@color/colorBlack"
            android:text="@string/forgot_pass"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_pass"
            app:layout_constraintVertical_bias="0.031" />

        <ImageView
            android:id="@+id/encrypt_stats"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignTop="@+id/enter_pass"
            android:layout_alignBottom="@+id/enter_pass"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/recover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.384"
            app:layout_constraintStart_toEndOf="@+id/enter_pass"
            app:layout_constraintTop_toBottomOf="@+id/warning"
            app:layout_constraintVertical_bias="0.645" />
    </RelativeLayout>
</ScrollView>